--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -7,77 +7,6 @@ html, body {
   background: transparent;
 }
 
-.intro {
-  background: transparent;
-  width: 100%;
-  height: auto;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  text-align: left;
-}
-
-.intro h1.heading {
-  padding-left: 8px;
-  margin-bottom: 15px;
-  margin-top: 10px;
-  width: 100%;
-  font-family: 'Sniglet', cursive;
-  color: black;
-  font-weight: bold;
-  font-size: 26px;
-}
-
-.intro p {
-  padding-left: 8px;
-  font-size: 14px;
-  font-family: 'Sniglet', cursive;
-  color: black;
-  opacity: 0.8;
-  line-height: 230%;
-}
-
-.intro .sites {
-  padding: 10px;
-  text-align: left;
-  background: #93acff67;
-  width: 100%;
-  height: 190px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.intro .sites .swiper-wrapper .swiper-slide {
-  background: #607bd3;
-  width: 150px !important;
-  height: 100px !important;
-  text-align: center;
-  margin: 20px;
-  margin-left: 0;
-  border-radius: 7px;
-  position: relative;
-}
-
-.intro .sites .swiper-wrapper .swiper-slide h1 {
-  font-size: 17px;
-  color: white;
-  padding-top: 10px;
-}
-
-.intro .sites .swiper-wrapper .swiper-slide i {
-  color: white;
-  font-size: 10px;
-  padding-top: 5px;
-  -webkit-transform: translateY(10px);
-          transform: translateY(10px);
-}
-
 .info {
   background: transparent;
   width: 100%;
@@ -92,13 +21,17 @@ html, body {
   margin-bottom: 15px;
   margin-top: 10px;
   width: 100%;
-  font-family: 'Sniglet', cursive;
+  font-family: 'Lato', sans-serif;
   color: black;
-  font-weight: bold;
   font-size: 26px;
 }
 
-.info p {
+.info .info-text {
+  -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, color-stop(60%, #000), to(transparent));
+  -webkit-mask-image: linear-gradient(180deg, #000 60%, transparent);
+}
+
+.info .info-text p {
   padding-left: 8px;
   font-size: 14px;
   font-family: 'Sniglet', cursive;
@@ -112,6 +45,66 @@ html, body {
   width: auto;
   height: 140px;
   float: right;
+}
+
+.info .info-actions {
+  width: 100%;
+  -webkit-transform: translateY(25px);
+          transform: translateY(25px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-left: 8px;
+}
+
+.info .info-actions a {
+  width: 120px;
+  padding: 10px;
+  background: transparent;
+  border-radius: 7px;
+  border: 2px solid white;
+  outline: none;
+  color: white;
+  text-align: center;
+  background: #6a81df;
+}
+
+.skills {
+  background: transparent;
+  width: 100%;
+  height: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: left;
+}
+
+.skills h1.heading {
+  padding-left: 8px;
+  margin-bottom: 15px;
+  margin-top: 10px;
+  width: 100%;
+  font-family: 'Lato', sans-serif;
+  color: black;
+  font-size: 26px;
+}
+
+.sites {
+  background: transparent;
+  width: 100%;
+  height: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: left;
+}
+
+.sites h1.heading {
+  padding-left: 8px;
+  margin-bottom: 15px;
+  margin-top: 10px;
+  width: 100%;
+  font-family: 'Lato', sans-serif;
+  color: black;
+  font-size: 26px;
 }
 
 .ecommerce {
@@ -447,5 +440,26 @@ html, body {
 .contact-us form .form-actions button:hover {
   background: white;
   color: black;
+}
+
+@media only screen and (min-device-width: 768px) {
+  .contact-us form {
+    max-width: 560px;
+  }
+  .contact-us form .form-tag-navn {
+    left: 20px;
+    top: 24px;
+  }
+  .contact-us form .form-tag-email {
+    left: 20px;
+    top: 92px;
+  }
+  .contact-us form .form-tag-message {
+    left: 20px;
+    top: 165px;
+  }
+  .contact-us form input {
+    padding: 10px;
+  }
 }
 /*# sourceMappingURL=base.css.map */
