--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -80,68 +80,69 @@ body{
 // COVER
 .cover{
   width: 100%;
-  height: auto;
+  height: 85vh;
   position: relative;
+  background:#6a81df;
   img{
-    width: 100%;
-    height: 600px;
-    object-fit: cover;
-    filter: brightness(50%);
+    width: 265px;
+    height: auto;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%) translateY(100px);
+    box-shadow: 8px 6px 3px rgba(255, 255, 255, 0.438);
+    border-radius: 30px;
   }
   .content{
     opacity: 0;
     transition: .4s ease-in;
     position: absolute;
-    top: 500px;
+    top: 240px;
+    right: -200px;
     width: 100%;
-    text-align: center;
+    padding-left: 15px;
     &.active{
       opacity: 1;
-      top: 140px;
+      right: 0;
     }
     .text{
       width: 100%;
       height: auto;
-      text-align: center;
+      text-align: left;
       z-index: 10;
+      transform: translateY(80px);
       h1{
         color: rgb(240, 240, 240);
         font-size: 34px;
         font-family: 'Alata', sans-serif;
         line-height: 160%;
         font-weight: bold;
-        text-shadow: 0.3px 0.3px 1px white;        
-        .moderne{
-          font-size: 35px;
-          color: transparent;
-          -webkit-text-stroke: 1px white;
-          text-stroke: 1px white;
-          text-shadow: none;
-          font-family: 'Alata', sans-serif;
-          font-weight: normal;
-        }
-        .lave.priser{
-          font-family: 'Alata', sans-serif;
-          position: relative;
-          top: 5px;
-          color: #6e8efb;
-        }
-        .background-overlay{
-          width: 210px;
-          height: 55px;
-          background: rgb(240, 240, 240);
-          position: absolute;
-          left: 50%;
-          transform: skew(-18deg) translateY(6px) translateX(-50%);
-        }
+        text-shadow: 0.3px 0.3px 1px white;       
       }
       p{
         color: rgb(240, 240, 240);
         font-size: 16px;
         font-family: 'Alata', sans-serif;
-        line-height: 160%;
         opacity: 0.7;
-        transform: translateY(30px);
+      }
+      .cover-actions{
+        width: 100%;
+        transform: translateY(25px);
+        display: flex;
+        a{
+          padding: 10px;
+          background: transparent;
+          border-radius: 7px;
+          border: 2px solid white;
+          outline: none;
+          color: white;
+          text-align: center;
+          &:nth-child(1){
+          }
+          &:nth-child(2){
+            transform: translateX(13px);
+            background: rgb(28, 211, 28);
+          }
+        }
       }
     }
   }
