--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -1,3 +1,7 @@
+.desktop-menu {
+  display: none;
+}
+
 #navbar {
   background: transparent;
   z-index: 100;
@@ -13,6 +17,8 @@
           align-items: center;
   -webkit-transition: .2s ease-in-out;
   transition: .2s ease-in-out;
+  -webkit-box-shadow: 1px 0px 3px rgba(255, 255, 255, 0.329);
+          box-shadow: 1px 0px 3px rgba(255, 255, 255, 0.329);
 }
 
 #navbar.sticky {
@@ -132,6 +138,7 @@
   z-index: 120;
   opacity: 0;
   pointer-events: none;
+  display: unset;
 }
 
 #navbar .sidebar .sidebar-ul {
@@ -306,5 +313,159 @@
   background: transparent;
   text-decoration: none;
   background: #1cd31c;
+}
+
+@media only screen and (min-device-width: 1024px) {
+  #navbar.sticky .desktop-menu .desktop-menu-ul .desktop-menu-li a {
+    color: black;
+  }
+  #navbar .sidebar {
+    display: none;
+  }
+  #navbar .hamburger {
+    display: none;
+    background: red;
+  }
+  #navbar .order {
+    right: 700px;
+    font-size: 12px;
+  }
+  #navbar .logo h1 {
+    font-size: 30px;
+  }
+  #navbar .desktop-menu {
+    display: block;
+    background: transparent;
+    height: auto;
+    width: 100%;
+    position: absolute;
+    right: 20px;
+    top: 16px;
+    -webkit-transition: .7s;
+    transition: .7s;
+    text-align: right;
+  }
+  #navbar .desktop-menu .desktop-menu-ul {
+    position: relative;
+    width: 100%;
+  }
+  #navbar .desktop-menu .desktop-menu-ul .desktop-menu-li {
+    list-style: none;
+  }
+  #navbar .desktop-menu .desktop-menu-ul .desktop-menu-li a {
+    display: inline-block;
+    color: white;
+    text-decoration: none;
+    width: auto;
+    font-size: 14px;
+    padding: 5px;
+    -webkit-transition: .2s;
+    transition: .2s;
+    margin: auto 10px;
+    cursor: pointer;
+  }
+  #navbar .desktop-menu .desktop-menu-ul .desktop-menu-li a i {
+    -webkit-transform: translateX(10px);
+            transform: translateX(10px);
+    font-size: 14px;
+    -webkit-transition: .2s !important;
+    transition: .2s !important;
+  }
+  #navbar .desktop-menu .desktop-menu-ul .desktop-menu-li .desktop-menu-prices {
+    display: inline-block;
+  }
+  #navbar .desktop-menu .desktop-menu-ul .desktop-menu-li .desktop-menu-prices .desktop-prices-dropdown-links {
+    display: none;
+    width: 250px;
+    position: absolute;
+    -webkit-transform: translateX(-60px);
+            transform: translateX(-60px);
+    background: #f7f7f7;
+    border-radius: 7px;
+    text-align: left;
+  }
+  #navbar .desktop-menu .desktop-menu-ul .desktop-menu-li .desktop-menu-prices .desktop-prices-dropdown-links a {
+    color: black;
+    font-size: 13px;
+    opacity: 0.7;
+    width: 100%;
+    display: inline-block;
+    text-decoration: underline;
+  }
+  #navbar .desktop-menu .desktop-menu-ul .desktop-menu-li .desktop-menu-prices:hover .desktop-prices-dropdown-links {
+    display: block;
+  }
+  #navbar .desktop-menu .desktop-menu-ul .desktop-menu-li .desktop-menu-help {
+    display: inline-block;
+  }
+  #navbar .desktop-menu .desktop-menu-ul .desktop-menu-li .desktop-menu-help .desktop-help-dropdown-links {
+    display: none;
+    width: 250px;
+    position: absolute;
+    -webkit-transform: translateX(-60px);
+            transform: translateX(-60px);
+    background: #f7f7f7;
+    border-radius: 7px;
+    text-align: left;
+  }
+  #navbar .desktop-menu .desktop-menu-ul .desktop-menu-li .desktop-menu-help .desktop-help-dropdown-links a {
+    color: black;
+    font-size: 13px;
+    opacity: 0.7;
+    width: 100%;
+    display: inline-block;
+    text-decoration: underline;
+  }
+  #navbar .desktop-menu .desktop-menu-ul .desktop-menu-li .desktop-menu-help:hover .desktop-help-dropdown-links {
+    display: block;
+  }
+  #navbar .desktop-menu .desktop-menu-ul .desktop-menu-li .desktop-menu-account {
+    display: inline-block;
+  }
+  #navbar .desktop-menu .desktop-menu-ul .desktop-menu-li .desktop-menu-account .desktop-account-dropdown-links {
+    display: none;
+    width: 250px;
+    position: absolute;
+    -webkit-transform: translateX(-60px);
+            transform: translateX(-60px);
+    background: #f7f7f7;
+    border-radius: 7px;
+    text-align: left;
+  }
+  #navbar .desktop-menu .desktop-menu-ul .desktop-menu-li .desktop-menu-account .desktop-account-dropdown-links a {
+    color: black;
+    font-size: 13px;
+    opacity: 0.7;
+    width: 100%;
+    display: inline-block;
+    text-decoration: underline;
+  }
+  #navbar .desktop-menu .desktop-menu-ul .desktop-menu-li .desktop-menu-account:hover .desktop-account-dropdown-links {
+    display: block;
+  }
+  #navbar .desktop-menu .desktop-menu-ul .desktop-menu-li .desktop-menu-about {
+    display: inline-block;
+  }
+  #navbar .desktop-menu .desktop-menu-ul .desktop-menu-li .desktop-menu-about .desktop-about-dropdown-links {
+    display: none;
+    width: 250px;
+    position: absolute;
+    -webkit-transform: translateX(-60px);
+            transform: translateX(-60px);
+    background: #f7f7f7;
+    border-radius: 7px;
+    text-align: left;
+  }
+  #navbar .desktop-menu .desktop-menu-ul .desktop-menu-li .desktop-menu-about .desktop-about-dropdown-links a {
+    color: black;
+    font-size: 13px;
+    opacity: 0.7;
+    width: 100%;
+    display: inline-block;
+    text-decoration: underline;
+  }
+  #navbar .desktop-menu .desktop-menu-ul .desktop-menu-li .desktop-menu-about:hover .desktop-about-dropdown-links {
+    display: block;
+  }
 }
 /*# sourceMappingURL=nav.css.map */
