--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -104,7 +104,7 @@ body {
   width: 100%;
   height: 85vh;
   position: relative;
-  background: #6a81df;
+  background: #829efc;
 }
 
 .cover img {
@@ -173,10 +173,13 @@ body {
   padding: 10px;
   background: transparent;
   border-radius: 7px;
-  border: 2px solid white;
   outline: none;
   color: white;
   text-align: center;
+}
+
+.cover .content .text .cover-actions a:nth-child(1) {
+  border: 2px solid rgba(255, 255, 255, 0.329);
 }
 
 .cover .content .text .cover-actions a:nth-child(2) {
